-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.3.0-rc1
-
None
-
b9b3717007312a5bb4dcfd70e3205f706d3a19cb
From the code of RemoteLinuxEnvironmentAspectWidget I'd expect to have a button labeled "Fetch Device Environment" somewhere.
However, I can't see it from the Run page of kit configuration in the environment widget.
| For Gerrit Dashboard: QTCREATORBUG-18167 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 194691,2 | RemoteLinux: Fix creation of environment aspect widget | 4.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |