RemoteLinux: Fix creation of environment aspect widget

This was forgotten in ae9fff17a1.

Task-number: QTCREATORBUG-18167
Change-Id: Ib1e3d06ee822dff6b991d967b2f68148cc9c55c6
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>