src/plugins/remotelinux/remotelinuxenvironmentaspect.h
@@ -30,7 +30,6 @@
 #include <projectexplorer/environmentaspect.h>
 
 namespace RemoteLinux {
-class RemoteLinuxEnvironmentAspectWidget;
 
 class REMOTELINUX_EXPORT RemoteLinuxEnvironmentAspect : public ProjectExplorer::EnvironmentAspect
 {
@@ -39,7 +38,6 @@ class REMOTELINUX_EXPORT RemoteLinuxEnvironmentAspect : public ProjectExplorer::
 public:
     RemoteLinuxEnvironmentAspect(ProjectExplorer::RunConfiguration *rc);
     RemoteLinuxEnvironmentAspect *create(ProjectExplorer::RunConfiguration *parent) const;
-    ProjectExplorer::RunConfigWidget *createConfigurationWidget();
 
     QList<int> possibleBaseEnvironments() const;
     QString baseEnvironmentDisplayName(int base) const;
